Fixed sidebar position and added scrollbar

--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -6,6 +6,7 @@ body {
     background-color: @mainBgColor;
     display: grid;
     grid-template-columns: 4fr 1fr;
+    min-height: 100vh;
 }
 
 .round-span {
@@ -201,6 +202,10 @@ nav {
 }
 
 .sidebar {
+    position: sticky;
+    top: 0;
+    height: 100vh;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -236,8 +241,26 @@ nav {
         }
     }
 
+    .orders-list::-webkit-scrollbar {
+        width: 14px;
+    }
+
+    .orders-list::-webkit-scrollbar-track {
+        border-radius: 16px;
+        background-color: #e7e7e7;
+        border: 1px solid #cacaca;
+    }
+
+    .orders-list::-webkit-scrollbar-thumb {
+        border-radius: 16px;
+        border: 3px solid transparent;
+        background-clip: content-box;
+        background-color: @mainColor;
+    }
+
     .orders-list {
         height: 100%;
+        overflow-y: scroll;
 
         .order-card {
             position: relative;
